--- a/main.css
+++ b/main.css
@@ -9,6 +9,10 @@ header {
     justify-content: space-between;
     align-items: center;
     padding: 20px;
+    position: sticky;
+    top: 0;
+    color: white;
+    z-index: 1;
 }
 
 .header__logo {
@@ -208,4 +212,80 @@ footer {
    from { transform: rotate (0deg);}
    to { transform: rotate(360deg);}
 }
+
+/* Планшеты */
+@media (max-width: 1024px) {
+    
+    .about {
+        padding: 115px 20px;
+    }
+
+    .about h1 {
+        font-size: 36px; 
+        line-height: 40px;
+    }
+
+    .about__image {
+        width: 280px;
+    }
+
+    .about__sun-image {
+        height:  75px;
+        width: 75px;
+    }
+}
+
+/* Мобильные устройства */
+@media (max-width: 720px) {
+    body {
+        padding: 10px;
+    }
+
+    .header__logo {
+        height: 20px;
+    }
+
+    header a {
+        margin-right: 10px;
+    }
+
+    .about {
+        flex-direction: column-reverse;
+        padding: 50px 10px;
+    }
+
+    .about h1 {
+        font-size: 36px; 
+        line-height: 40px;
+    }
+
+    .about__image {
+        width: 280px;
+    }
+
+    .about__sun-image {
+        height:  75px;
+        width: 75px;
+    }
+
+    .form {
+        padding: 50px 10px;
+    }
+  
+    .form h1 {
+        font-size: 36px;
+    }
+  
+    footer {
+        padding: 50px 10px;
+    }
+  
+    .footer__container {
+        flex-direction: column;
+    }
+}
+
+
+
+
 
