--- a/main.css
+++ b/main.css
@@ -11,8 +11,9 @@ header {
     padding: 20px;
     position: sticky;
     top: 0;
-    color: white;
+    background-color: white;
     z-index: 1;
+
 }
 
 .header__logo {
@@ -81,6 +82,167 @@ button {
 
 .about__info {
     max-width: 550px;
+}
+
+.features {
+    background-color: white;
+    padding: 115px 60px 115px 60px;
+}
+
+.cards {
+    display:grid;
+    grid-gap: 50px;
+    grid-template-columns: 1fr 1fr 1fr;
+    
+}
+.card {
+    padding: 35px 40px 25px 40px;
+    border: 1px solid #D9E4E6;
+    border-radius: 5px;
+}
+
+.card p {
+    font-size: 16px;
+    line-height: 22px;
+    opacity: 0.8;
+}
+
+.card__logo {
+    height: 100px;
+    width: 100px;
+    font-size: 32px;
+    font-weight: 700;
+    background-color: #eaeff9;
+    border-radius: 50%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    color: #ad1714;
+    
+}
+
+.fa-solar-panel {
+    color: #ffb406;
+}
+
+.fa-chart-line {
+    color: #22a030;
+}
+
+.features__border {
+    margin-top: 50px;
+    margin-bottom: 50px;
+    border: 1px solid #E6EAF4;
+    
+}
+
+.features__feedback {
+    display: flex;
+    align-items: center;
+}
+
+.features__feedback-left {
+    padding-right: 10px;
+}
+
+.features__feedback-left h2 {
+    font-size: 48px;
+}
+
+.features__feedback-left p {
+    font-size: 18px;
+    line-height: 26px;
+    opacity: 0.7;
+}
+
+.features__feedback-right {
+    display: flex;
+    justify-content: center;
+}
+
+.features__box {
+    padding: 30px 40px 25px 40px;
+    color: white;
+    border-radius: 25px;
+}
+
+.features__box h3 {
+    margin-bottom: 20px;
+    margin-top: 0px;
+    font-size: 48px;
+}
+
+.features__savings-box {
+    background-color: #dc5e26;
+    box-shadow: 0px 6px 0 rgb(221 95 38 / 20%);
+    margin-right: 30px;
+}
+
+.features__rate-box {
+    background-color: #1D263A;
+    box-shadow: 0px 6px 0 rgb(29 38 58 / 20%);
+}
+
+.fa-star {
+    color: #ff7039;
+}
+
+.promo {
+    display: flex;
+}
+
+.promo__image {
+    background-image: url("/green-corp-landing/img/promo.jpg");
+    width: 50%;
+    flex-shrink: 0;
+    background-size: cover;
+    background-position: center;
+}
+
+.promo__right {
+    background-color: #dd5f26;
+    padding: 160px 60px 160px 60px;
+}
+
+.card__right {
+    background-color: white;
+    padding: 30px 40px 30px 40px;
+    font-size: 20px;
+    line-height: 22px;
+    font-weight: 500;
+    border-radius: 25px;
+}
+
+.card__right p {
+    opacity: 0.8;
+}
+
+.card__right p::before {
+    content: '';
+    display: inline-block;
+    width: 10px;
+    height: 10px;
+    border-radius: 50%;
+    background-color: #ec6b29;
+    margin-right: 10px;
+}
+
+.card__right button {
+    background-color: #107b1c;
+    margin-top: 20px;
+    font-size: 18px;
+    padding: 15px 30px 15px 30px;
+    font-weight: 600;
+}
+
+.card__right button i {
+    font-size: 15px;
+    margin-left: 5px;
+}
+
+.card__button {
+    display: flex;
+    justify-content: center;
 }
 
 .form__container {
@@ -247,6 +409,49 @@ footer {
 
     header a {
         margin-right: 10px;
+    }
+
+    .features {
+        padding: 50px 10px;
+    }
+
+    .cards {
+        grid-template-columns: auto;
+    }
+
+    .features__feedback {
+        flex-direction: column;
+    }
+
+    .features__feedback-left {
+        padding: 0px;
+    }
+
+    .features__feedback-left h2, .features__box h3 {
+        font-size: 36px;
+    }
+
+    .features__feedback-right {
+        flex-direction: column;
+        align-items: initial;
+    }
+
+    .features__savings-box {
+        margin-right: 0px;
+        margin-bottom: 30px;
+    }
+
+    .promo__image {
+        width: 100%;
+        height: 500px;
+    }
+
+    .promo {
+        flex-direction: column-reverse;
+    }
+    
+    .promo__right {
+        padding: 50px 10px 50px 10px;
     }
 
     .about {
