--- a/main.css
+++ b/main.css
@@ -44,6 +44,13 @@ button {
     transition: background-color 0.3s ease-in;
 }
 
+.orb-canvas {
+    position: absolute;
+    top: 0;
+    right: 0;
+    height: 100%;
+}
+
 .about__image {
     width: 500px;
 }
@@ -67,6 +74,7 @@ button {
     background: url('img/back.png') no-repeat;
     background-position: center;
     background-size: cover;
+    position: relative;
 }
 
 .about h1 {
